lower/src/ast2ir/snapshots/long_lower__ast2ir__parse_and_lower.snap
---
source: lower/src/ast2ir/mod.rs
expression: decl

---
Ok(
    FuncDef(
        FuncDef {
            name: Global(
                [
                    "main",
                ],
            ),
            sig: FuncSignature {
                ret: Int(
                    Signed,
                ),
                params: [],
            },
            body: BlockStmt(
                [
                    Located {
                        inner: Return(
                            Some(
                                Located {
                                    inner: Literal(
                                        Int(
                                            Int(
                                                0,
                                            ),
                                        ),
                                    ),
                                    loc: None:1:21,
                                },
                            ),
                        ),
                        loc: None:1:14,
                    },
                ],
            ),
            locals: Locals {  },
        },
    ),
)
