lower/src/ast2ir/snapshots/long_lower__ast2ir__parse_and_lower_simple_decl.snap
---
source: lower/src/ast2ir/mod.rs
expression: decls

---
[
    Ok(
        SimpleDecl(
            [
                SimpleDecl {
                    name: Global(
                        [
                            "i",
                        ],
                    ),
                    ty: Int(
                        Signed,
                    ),
                    init: None,
                },
            ],
        ),
    ),
]
