lower/src/ast2ir/snapshots/long_lower__ast2ir__parse_and_lower_simple_decl2.snap
---
source: lower/src/ast2ir/mod.rs
expression: decl

---
Ok(
    SimpleDecl(
        [
            SimpleDecl {
                name: Global(
                    [
                        "i",
                    ],
                ),
                ty: Int(
                    Signed,
                ),
                init: None,
            },
            SimpleDecl {
                name: Global(
                    [
                        "j",
                    ],
                ),
                ty: Int(
                    Signed,
                ),
                init: None,
            },
        ],
    ),
)
